Added header contents to html.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jailanie Kaganovsky's Portfolio</title>
 </head>
+
 <body>
-    <img src="./images/selfportrait.jpg" alt="Self Portrait"/>
+    <header>
+        <img src="https://media.giphy.com/media/dXKLXks7fK9qrRxbHF/giphy.gif" width="320" height="120" alt="DNA Strand">
+        <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" width="320" height="120" alt="Coding">
+        <img src="./images/selfportrait.jpg" width="250" height="250" alt="Self Portrait"/>
+        <h1>JAILANIE KAGANOVSKY</h1>
+        <h2>Research Coordinator & Web Developer </h2>
+        <nav class="site-tags">
+            <a href="#about-me">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#contact-me">Contact Me</a>
+            <a href="#resume">Resume</a>
+        </nav>
+    </header>
+
+
 
 </body>
+
+
 </html>
