--- a/index.html
+++ b/index.html
@@ -3,27 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Jailanie Kaganovsky's Portfolio</title>
 </head>
 
 <body>
     <header>
-        <img src="https://media.giphy.com/media/dXKLXks7fK9qrRxbHF/giphy.gif" width="320" height="120" alt="DNA Strand">
-        <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" width="320" height="120" alt="Coding">
-        <img src="./images/selfportrait.jpg" width="250" height="250" alt="Self Portrait"/>
-        <h1>JAILANIE KAGANOVSKY</h1>
-        <h2>Research Coordinator & Web Developer </h2>
-        <nav class="site-tags">
+        <nav>
+            <h1>JAILANIE KAGANOVSKY</h1>
             <a href="#about-me">About Me</a>
             <a href="#work">Work</a>
             <a href="#contact-me">Contact Me</a>
             <a href="#resume">Resume</a>
         </nav>
+        <img class="self-portrait" src="./images/selfportrait.jpg" alt="Self Portrait"/>
+        <h2>Research Coordinator & Web Developer </h2>
     </header>
-
-
-
+    <section class="container">
+        <div class="about-me-flex">
+            <h2 id="about-me">About Me</h2>
+        </div>
+        <p>Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions,
+            tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT.
+            Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload
+            organization, research assistance and coordination, and system application building, web development, and
+            maintenance. </p>
+    </section>
+    <section class="container">
+        <div class="work-flex">
+            <h2 id="work">Work</h2>
+        </div>
+        <div class="text-block">
+            <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" width="320" height="120" alt="Coding">
+            <h4></h4>
+        </div>
+        <p></p>
+    </section>
+    <section class="container">
+        <div class="contact-me-flex">
+            <h2 id="contact-me">Contact Me</h2>
+        </div>
+        <nav>
+        <a href="mailto:jnctw33ty@gmail.com">E-Mail</a>
+        <a href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
+        <a href="https://github.com/jkaganovsky">Github</a>
+        </nav>
+    </section>
 </body>
 
-
+<!-- <div class="container">
+  <img src="nature.jpg" alt="Norway" style="width:100%;">
+  <div class="text-block">
+    <h4>Nature</h4>
+    <p>What a beautiful sunrise</p>
+  </div>
+</div> -->
 </html>
