Added reset.css file and edited containers in html and css.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Jailanie Kaganovsky's Portfolio</title>
 </head>
@@ -20,18 +21,19 @@
         <h2>Research Coordinator & Web Developer </h2>
     </header>
     <section class="container">
-        <div class="about-me-flex">
-            <h2 id="about-me">About Me</h2>
+        <div>
+            <h2>About Me</h2>
+            <p>Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions,
+                tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT.
+                Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload
+                organization, research assistance and coordination, and system application building, web development, and
+                maintenance. </p>
         </div>
-        <p>Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions,
-            tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT.
-            Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload
-            organization, research assistance and coordination, and system application building, web development, and
-            maintenance. </p>
     </section>
+
     <section class="container">
-        <div class="work-flex">
-            <h2 id="work">Work</h2>
+        <div>
+            <h2>Work</h2>
         </div>
         <div class="text-block">
             <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" width="320" height="120" alt="Coding">
@@ -51,11 +53,4 @@
     </section>
 </body>
 
-<!-- <div class="container">
-  <img src="nature.jpg" alt="Norway" style="width:100%;">
-  <div class="text-block">
-    <h4>Nature</h4>
-    <p>What a beautiful sunrise</p>
-  </div>
-</div> -->
 </html>
