Styled header using flexbox.

--- a/index.html
+++ b/index.html
@@ -10,15 +10,19 @@
 
 <body>
     <header>
-        <nav>
+        <section class="header-nav">
             <h1>JAILANIE KAGANOVSKY</h1>
-            <a href="#about-me">About Me</a>
-            <a href="#work">Work</a>
-            <a href="#contact-me">Contact Me</a>
-            <a href="#resume">Resume</a>
-        </nav>
-        <img class="self-portrait" src="./images/selfportrait.jpg" alt="Self Portrait"/>
-        <h2>Research Coordinator & Web Developer </h2>
+            <nav>
+                <a href="#about-me">About Me</a>
+                <a href="#work">Work</a>
+                <a href="#contact-me">Contact Me</a>
+                <a href="#resume">Resume</a>
+            </nav>
+        </section>
+        <section class="header-title">
+            <img class="self-portrait" src="./images/selfportrait.jpg" alt="Self Portrait"/>
+            <h2>Research Coordinator & Web Developer </h2>
+        </section>
     </header>
     <section class="container">
         <div>
