Added images, styled self-portrait, and styled 3 sections.

--- a/index.html
+++ b/index.html
@@ -24,36 +24,36 @@
             <h2>Research Coordinator & Web Developer </h2>
         </section>
     </header>
-    <section class="container">
-        <div>
-            <h2>About Me</h2>
+
+    <section class="content">
+        <h2>About Me</h2>
+        <aside>
             <p>Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions,
                 tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT.
                 Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload
                 organization, research assistance and coordination, and system application building, web development, and
                 maintenance. </p>
-        </div>
+        </aside>
     </section>
 
-    <section class="container">
-        <div>
-            <h2>Work</h2>
-        </div>
-        <div class="text-block">
-            <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" width="320" height="120" alt="Coding">
-            <h4></h4>
-        </div>
-        <p></p>
+    <section class="content">
+        <h2>Work</h2>
+        <aside class="project-image">
+            <img id="main-project" src="./images/coding.jpg" alt="Project Placeholder" />
+            <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" alt="Project Placeholder 2" />
+            <img src="https://media.giphy.com/media/l3nWgXCpQpMUOrkoo/giphy.gif" alt="Project Placeholder 3" />
+            <img src="./images/ubamlogo.png" alt="Usborne Books & More Independent Consultant Placeholder" />
+            <img src="./images/pandajamscraftslogo.jpg" alt="Panda Jams Crafts Logo Placeholder" />
+        </aside>
     </section>
-    <section class="container">
-        <div class="contact-me-flex">
-            <h2 id="contact-me">Contact Me</h2>
-        </div>
-        <nav>
-        <a href="mailto:jnctw33ty@gmail.com">E-Mail</a>
-        <a href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
-        <a href="https://github.com/jkaganovsky">Github</a>
-        </nav>
+
+    <section class="content">
+        <h2 id="contact-me">Contact Me</h2>
+        <aside>
+            <a href="mailto:jnctw33ty@gmail.com">E-Mail</a>
+            <a href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
+            <a href="https://github.com/jkaganovsky">Github</a>
+        </aside>
     </section>
 </body>
 
