Added new html sections in Work and styled About Me section.

--- a/index.html
+++ b/index.html
@@ -26,25 +26,52 @@
     </header>
 
     <section class="content">
-        <h2>About Me</h2>
-        <aside>
-            <p>Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions,
+        <h2 id="about-me">About Me</h2>
+        <p>Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions,
                 tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT.
                 Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload
                 organization, research assistance and coordination, and system application building, web development, and
-                maintenance. </p>
-        </aside>
+                maintenance.
+        </p>
     </section>
 
     <section class="content">
-        <h2>Work</h2>
-        <aside class="project-image">
+        <h2 id="work">Work</h2>
+        <section class="projects">
             <img id="main-project" src="./images/coding.jpg" alt="Project Placeholder" />
+            <aside class="project-info">
+                <h3>Main Project</h3>
+                <h4>Highlight</h4>
+            </aside>
+        </section>
+        <section>
             <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" alt="Project Placeholder 2" />
+            <aside class="project-info">
+                <h3>Project 2</h3>
+                <h4>Placeholder 2</h4>
+            </aside>
+        </section>
+        <section>
             <img src="https://media.giphy.com/media/l3nWgXCpQpMUOrkoo/giphy.gif" alt="Project Placeholder 3" />
+            <aside class="project-info">
+                <h3>Project 2</h3>
+                <h4>Placeholder 2</h4>
+            </aside>
+        </section>
+        <section>
             <img src="./images/ubamlogo.png" alt="Usborne Books & More Independent Consultant Placeholder" />
+            <aside class="project-info">
+                <h3>Project 3</h3>
+                <h4>Placeholder 3</h4>
+            </aside>
+        </section>
+        <section>
             <img src="./images/pandajamscraftslogo.jpg" alt="Panda Jams Crafts Logo Placeholder" />
-        </aside>
+            <aside class="project-info">
+                <h3>Project 4</h3>
+                <h4>Placeholder 4</h4>
+            </aside>
+        </section>
     </section>
 
     <section class="content">
