Styled images to Work content.

--- a/index.html
+++ b/index.html
@@ -37,46 +37,50 @@
 
     <section class="content">
         <h2 id="work">Work</h2>
-        <section class="projects">
-            <img id="main-project" src="./images/coding.jpg" alt="Project Placeholder" />
-            <aside class="project-info">
-                <h3>Main Project</h3>
-                <h4>Highlight</h4>
-            </aside>
-        </section>
-        <section>
-            <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" alt="Project Placeholder 2" />
-            <aside class="project-info">
-                <h3>Project 2</h3>
-                <h4>Placeholder 2</h4>
-            </aside>
-        </section>
-        <section>
-            <img src="https://media.giphy.com/media/l3nWgXCpQpMUOrkoo/giphy.gif" alt="Project Placeholder 3" />
-            <aside class="project-info">
-                <h3>Project 2</h3>
-                <h4>Placeholder 2</h4>
-            </aside>
-        </section>
-        <section>
-            <img src="./images/ubamlogo.png" alt="Usborne Books & More Independent Consultant Placeholder" />
-            <aside class="project-info">
-                <h3>Project 3</h3>
-                <h4>Placeholder 3</h4>
-            </aside>
-        </section>
-        <section>
-            <img src="./images/pandajamscraftslogo.jpg" alt="Panda Jams Crafts Logo Placeholder" />
-            <aside class="project-info">
-                <h3>Project 4</h3>
-                <h4>Placeholder 4</h4>
-            </aside>
-        </section>
+        <div class="work-content">
+            <section class="featured-project">
+                <img src="./images/coding.jpg" alt="Project Placeholder" />
+                <aside class="project-title">
+                    <h3>Main Project</h3>
+                    <h4>Featured Project</h4>
+                </aside>
+            </section>
+            <div class="projects">
+                <section class="project-info">
+                    <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" alt="Project Placeholder 2" />
+                    <aside class="project-title">
+                        <h3>Project 2</h3>
+                        <h4>Placeholder 2</h4>
+                    </aside>
+                </section>
+                <section class="project-info">
+                    <img src="https://media.giphy.com/media/l3nWgXCpQpMUOrkoo/giphy.gif" alt="Project Placeholder 3" />
+                    <aside class="project-title">
+                        <h3>Project 2</h3>
+                        <h4>Placeholder 2</h4>
+                    </aside>
+                </section>
+                <section class="project-info">
+                    <img src="./images/ubamlogo.png" alt="Usborne Books & More Independent Consultant Placeholder" />
+                    <aside class="project-title">
+                        <h3>Project 3</h3>
+                        <h4>Placeholder 3</h4>
+                    </aside>
+                </section>
+                <section class="project-info">
+                    <img src="./images/pandajamscraftslogo.jpg" alt="Panda Jams Crafts Logo Placeholder" />
+                    <aside class="project-title">
+                        <h3>Project 4</h3>
+                        <h4>Placeholder 4</h4>
+                    </aside>
+                </section>
+          </div>
+        </div>
     </section>
 
     <section class="content">
         <h2 id="contact-me">Contact Me</h2>
-        <aside>
+        <aside class="contacts">
             <a href="mailto:jnctw33ty@gmail.com">E-Mail</a>
             <a href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
             <a href="https://github.com/jkaganovsky">Github</a>
