--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
     <section class="content">
         <h2 id="contact-me">Contact Me</h2>
-        <aside class="contacts">
+        <nav class="contacts">
             <a href="mailto:jnctw33ty@gmail.com">E-Mail</a>
             <a href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
             <a href="https://github.com/jkaganovsky">Github</a>
-        </aside>
+        </nav>
     </section>
 </body>
 
