--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+    <!-- Featured header with links -->
     <header>
+
         <section class="header-nav">
             <h1>JAILANIE KAGANOVSKY</h1>
             <nav>
@@ -19,73 +21,85 @@
                 <a href="#resume">Resume</a>
             </nav>
         </section>
+
         <section class="header-title">
             <img class="self-portrait" src="./images/selfportrait.jpg" alt="Self Portrait"/>
             <h2>Research Coordinator & Web Developer </h2>
         </section>
+
     </header>
 
-    <section class="content">
-        <h2 id="about-me">About Me</h2>
-        <p>Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions,
-                tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT.
-                Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload
-                organization, research assistance and coordination, and system application building, web development, and
-                maintenance.
-        </p>
-    </section>
-
-    <section class="content">
-        <h2 id="work">Work</h2>
-        <div class="work-content">
-            <section class="featured-project">
-                <img src="./images/coding.jpg" alt="Project Placeholder" />
-                <aside class="project-title">
-                    <h3>Main Project</h3>
-                    <h4>Featured Project</h4>
-                </aside>
+    <!-- Divided content into 3 main sections (About Me, Work, Contact Me) with id tags for links from
+    header to reference to. -->
+    <main>
+        <div class="content">
+            <section class="content-main">
+                <h2 id="about-me">About Me</h2>
+                <p>Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions,
+                    tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT.
+                    Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload
+                    organization, research assistance and coordination, and system application building, web development, and
+                    maintenance.
+                </p>
             </section>
-            <div class="projects">
-                <section class="project-info">
-                    <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" alt="Project Placeholder 2" />
-                    <aside class="project-title">
-                        <h3>Project 2</h3>
-                        <h4>Placeholder 2</h4>
-                    </aside>
-                </section>
-                <section class="project-info">
-                    <img src="https://media.giphy.com/media/l3nWgXCpQpMUOrkoo/giphy.gif" alt="Project Placeholder 3" />
-                    <aside class="project-title">
-                        <h3>Project 2</h3>
-                        <h4>Placeholder 2</h4>
-                    </aside>
-                </section>
-                <section class="project-info">
-                    <img src="./images/ubamlogo.png" alt="Usborne Books & More Independent Consultant Placeholder" />
-                    <aside class="project-title">
-                        <h3>Project 3</h3>
-                        <h4>Placeholder 3</h4>
-                    </aside>
-                </section>
-                <section class="project-info">
-                    <img src="./images/pandajamscraftslogo.jpg" alt="Panda Jams Crafts Logo Placeholder" />
-                    <aside class="project-title">
-                        <h3>Project 4</h3>
-                        <h4>Placeholder 4</h4>
-                    </aside>
-                </section>
-          </div>
-        </div>
-    </section>
 
-    <section class="content">
-        <h2 id="contact-me">Contact Me</h2>
-        <nav class="contacts">
-            <a href="mailto:jnctw33ty@gmail.com">E-Mail</a>
-            <a href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
-            <a href="https://github.com/jkaganovsky">Github</a>
-        </nav>
-    </section>
+        <section class="content-main">
+                <h2 id="work">Work</h2>
+                <div class="work-content">
+                    <section class="featured-project">
+                        <img src="./images/coding.jpg" alt="Project Placeholder" />
+                        <aside class="project-title">
+                            <h3>Main Project</h3>
+                            <h4>Featured Project</h4>
+                        </aside>
+                    </section>
+
+                    <div class="projects">
+                        <section class="project-info">
+                            <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" alt="Project Placeholder 2" />
+                            <aside class="project-title">
+                                <h3>Project 2</h3>
+                                <h4>Placeholder 2</h4>
+                            </aside>
+                        </section>
+
+                        <section class="project-info">
+                            <img src="https://media.giphy.com/media/l3nWgXCpQpMUOrkoo/giphy.gif" alt="Project Placeholder 3" />
+                            <aside class="project-title">
+                                <h3>Project 3</h3>
+                                <h4>Placeholder 3</h4>
+                            </aside>
+                        </section>
+
+                        <section class="project-info">
+                            <img src="./images/ubamlogo.png" alt="Usborne Books & More Independent Consultant Placeholder" />
+                            <aside class="project-title">
+                                <h3>Project 4</h3>
+                                <h4>Placeholder 4</h4>
+                            </aside>
+                        </section>
+
+                        <section class="project-info">
+                            <img src="./images/pandajamscraftslogo.jpg" alt="Panda Jams Crafts Logo Placeholder" />
+                            <aside class="project-title">
+                                <h3>Project 5</h3>
+                                <h4>Placeholder 5</h4>
+                            </aside>
+                        </section>
+                    </div>
+                </div>
+            </section>
+
+            <section class="content-main">
+                <h2 id="contact-me">Contact Me</h2>
+                <nav class="contacts">
+                    <a href="mailto:jnctw33ty@gmail.com">E-Mail</a>
+                    <a href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
+                    <a href="https://github.com/jkaganovsky">Github</a>
+                </nav>
+            </section>
+        </div>
+    </main>
 </body>
 
 </html>
