--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <a href="#about-me">About Me</a>
                 <a href="#work">Work</a>
                 <a href="#contact-me">Contact Me</a>
-                <a href="#resume">Resume</a>
+                <a href="./assets/Resume.pdf">Resume</a>
             </nav>
         </section>
 
         <section class="header-title">
-            <img class="self-portrait" src="./images/selfportrait.jpg" alt="Self Portrait"/>
+            <img class="self-portrait" src="./assets/images/selfportrait.jpg" alt="Self Portrait"/>
             <h2>Research Coordinator & Web Developer </h2>
         </section>
 
@@ -43,11 +43,11 @@
                 </p>
             </section>
 
-        <section class="content-main">
+            <section class="content-main">
                 <h2 id="work">Work</h2>
                 <div class="work-content">
                     <section class="featured-project">
-                        <img src="./images/coding.jpg" alt="Project Placeholder" />
+                        <img src="./assets/images/coding.jpg" alt="Project Placeholder" />
                         <aside class="project-title">
                             <h3>Main Project</h3>
                             <h4>Featured Project</h4>
@@ -72,7 +72,7 @@
                         </section>
 
                         <section class="project-info">
-                            <img src="./images/ubamlogo.png" alt="Usborne Books & More Independent Consultant Placeholder" />
+                            <img src="./assets/images/ubamlogo.png" alt="Usborne Books & More Independent Consultant Placeholder" />
                             <aside class="project-title">
                                 <h3>Project 4</h3>
                                 <h4>Placeholder 4</h4>
@@ -80,7 +80,7 @@
                         </section>
 
                         <section class="project-info">
-                            <img src="./images/pandajamscraftslogo.jpg" alt="Panda Jams Crafts Logo Placeholder" />
+                            <img src="./assets/images/pandajamscraftslogo.jpg" alt="Panda Jams Crafts Logo Placeholder" />
                             <aside class="project-title">
                                 <h3>Project 5</h3>
                                 <h4>Placeholder 5</h4>
@@ -98,6 +98,7 @@
                     <a href="https://github.com/jkaganovsky">Github</a>
                 </nav>
             </section>
+
         </div>
     </main>
 </body>
