--- a/index.html
+++ b/index.html
@@ -2,50 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
+
     <title>Jailanie Kaganovsky's Portfolio</title>
 </head>
 
 <body>
-    <!-- Featured header with links -->
+
+    <!-- Featured header with links, self-portrait, & title -->
     <header>
 
-        <section class="header-nav">
-            <h1>JAILANIE KAGANOVSKY</h1>
-            <nav>
-                <a href="#about-me">About Me</a>
-                <a href="#work">Work</a>
-                <a href="#contact-me">Contact Me</a>
-                <a href="./assets/Resume.pdf">Resume</a>
-            </nav>
-        </section>
+        <!-- Navbar content -->
+        <nav class="navbar navbar-dark bg-dark">
+            <h1 class="h2 w-25 p-2 mb-2 bg-info text-dark text-wrap text-center font-weight-bold">JAILANIE KAGANOVSKY</h1>
 
-        <section class="header-title">
-            <img class="self-portrait" src="./assets/images/selfportrait.jpg" alt="Self Portrait"/>
-            <h2>Research Coordinator & Web Developer </h2>
-        </section>
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                <a class="h4 nav-link text-info" href="#about-me">About Me</a>
+                </li>
+
+                <li class="nav-item">
+                <a class="h4 nav-link text-info" href="#work">Work</a>
+                </li>
+
+                <li class="nav-item">
+                <a class="h4 nav-link text-info" href="#contact-me">Contact Me</a>
+                </li>
+
+                <li class="nav-item">
+                <a class="h4 nav-link text-info" href="./assets/Resume.pdf">Resume</a>
+                </li>
+            </ul>
+        </nav>
+
+        <!-- Self-portrait & Title -->
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container d-flex justify-content-between">
+                <img class="rounded-circle self-portrait" src="./assets/images/selfportrait.jpg" alt="Self Portrait"/>
+
+                <h3 class="p-2 align-self-end bg-info font-italic"> Research Coordinator & Web Developer </h3>
+            </div>
+        </div>
 
     </header>
 
     <!-- Divided content into 3 main sections (About Me, Work, Contact Me) with id tags for links from
     header to reference to. -->
     <main>
-        <div class="content">
-            <section class="content-main">
-                <h2 id="about-me">About Me</h2>
-                <p>Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions,
-                    tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT.
-                    Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload
-                    organization, research assistance and coordination, and system application building, web development, and
-                    maintenance.
-                </p>
-            </section>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 d-flex justify-content-end">
+                    <h1 class="h1 align-self-start" id="about-me">
+                        <!-- <span class="border-right border-dark h-100"></span> -->
+                        About Me
+                    </h1>
+                </div>
 
-            <section class="content-main">
-                <h2 id="work">Work</h2>
-                <div class="work-content">
+                <div class="col-sm-8">
+                    <h3>
+                        Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions, tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT. Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload organization, research assistance and coordination, and system application building, web development, and maintenance.
+                    </h3>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-4 d-flex justify-content-end">
+                    <h1 class="h1 align-self-start" id="work">Work</h1>
+                </div>
+
+                <div class="col-sm-8">
                     <section class="featured-project">
                         <img src="./assets/images/coding.jpg" alt="Project Placeholder" />
                         <aside class="project-title">
@@ -88,19 +120,28 @@
                         </section>
                     </div>
                 </div>
-            </section>
+            </div>
 
-            <section class="content-main">
-                <h2 id="contact-me">Contact Me</h2>
-                <nav class="contacts">
-                    <a href="mailto:jnctw33ty@gmail.com">E-Mail</a>
-                    <a href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
-                    <a href="https://github.com/jkaganovsky">Github</a>
+            <div class="row">
+                <div class="col-sm-4 d-flex justify-content-end">
+                    <h1 class="h1 align-self-center" id="contact-me">Contact Me</h1>
+                </div>
+
+                <nav class="nav col-sm-8 p-4 d-flex justify-content-around">
+                    <a class="nav-link h4" href="mailto:jnctw33ty@gmail.com">E-Mail</a>
+
+                    <a class="nav-link h4" href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
+
+                    <a class="nav-link h4" href="https://github.com/jkaganovsky">Github</a>
                 </nav>
-            </section>
-
+            </div>
         </div>
     </main>
+
+    <!-- SCRIPT CDNs -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </body>
 
 </html>
