Changed html and css to we media friendly using bootstrap css framework.

--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4 d-flex justify-content-end">
-                    <h1 class="h1 align-self-start" id="about-me">
-                        <!-- <span class="border-right border-dark h-100"></span> -->
-                        About Me
-                    </h1>
+                    <h1 class="h1 align-self-start" id="about-me">About Me</h1>
+                    <span class="border border-dark ml-4 mb-2"></span>
                 </div>
 
                 <div class="col-sm-8">
@@ -75,49 +73,50 @@
             <div class="row">
                 <div class="col-sm-4 d-flex justify-content-end">
                     <h1 class="h1 align-self-start" id="work">Work</h1>
+                    <span class="border border-dark ml-4 mb-2"></span>
                 </div>
 
                 <div class="col-sm-8">
-                    <section class="featured-project">
-                        <img src="./assets/images/coding.jpg" alt="Project Placeholder" />
+                    <a class="featured-project btn" href="https://jkaganovsky.github.io/Kitchen-Helper/">
+                        <img src="./assets/images/kitchenhelper-screenshot.png" alt="Kitchen Helper" />
                         <aside class="project-title">
                             <h3>Main Project</h3>
-                            <h4>Featured Project</h4>
+                            <h4>Kitchen Helper</h4>
                         </aside>
-                    </section>
+                    </a>
 
                     <div class="projects">
-                        <section class="project-info">
-                            <img src="https://media.giphy.com/media/26tn33aiTi1jkl6H6/giphy.gif" alt="Project Placeholder 2" />
+                        <a class="project-info btn" href="https://jkaganovsky.github.io/Weather-Dashboard/">
+                            <img src="./assets/images/weatherdashboard-screenshot.png" alt="Weather Dashboard" />
                             <aside class="project-title">
                                 <h3>Project 2</h3>
-                                <h4>Placeholder 2</h4>
+                                <h4>Weather Dashboard</h4>
                             </aside>
-                        </section>
+                        </a>
 
-                        <section class="project-info">
-                            <img src="https://media.giphy.com/media/l3nWgXCpQpMUOrkoo/giphy.gif" alt="Project Placeholder 3" />
+                        <a class="project-info btn" href="https://jkaganovsky.github.io/Day-Planner/">
+                            <img src="./assets/images/dayscheduler-screenshot.png" alt="Work Day Scheduler" />
                             <aside class="project-title">
                                 <h3>Project 3</h3>
-                                <h4>Placeholder 3</h4>
+                                <h4>Work Day Scheduler</h4>
                             </aside>
-                        </section>
+                        </a>
 
-                        <section class="project-info">
-                            <img src="./assets/images/ubamlogo.png" alt="Usborne Books & More Independent Consultant Placeholder" />
+                        <a class="project-info btn" href="https://jkaganovsky.github.io/Code-Quiz/">
+                            <img src="./assets/images/codingquiz-screenshot.png" alt="Coding Quiz" />
                             <aside class="project-title">
                                 <h3>Project 4</h3>
-                                <h4>Placeholder 4</h4>
+                                <h4>Coding Quiz</h4>
                             </aside>
-                        </section>
+                        </a>
 
-                        <section class="project-info">
-                            <img src="./assets/images/pandajamscraftslogo.jpg" alt="Panda Jams Crafts Logo Placeholder" />
+                        <a class="project-info btn" href="https://jkaganovsky.github.io/Password-Generator/">
+                            <img src="./assets/images/passwordgenerator-screenshot.jpg" alt="Password Generator" />
                             <aside class="project-title">
                                 <h3>Project 5</h3>
-                                <h4>Placeholder 5</h4>
+                                <h4>Password Generator</h4>
                             </aside>
-                        </section>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -125,6 +124,7 @@
             <div class="row">
                 <div class="col-sm-4 d-flex justify-content-end">
                     <h1 class="h1 align-self-center" id="contact-me">Contact Me</h1>
+                    <span class="border border-dark ml-4"></span>
                 </div>
 
                 <nav class="nav col-sm-8 p-4 d-flex justify-content-around">
