--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+            integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -15,133 +16,116 @@
 </head>
 
 <body>
+    <div class="row">
 
-    <!-- Featured header with links, self-portrait, & title -->
-    <header>
+        <div class="col-sm-4 bg-info">
 
-        <!-- Navbar content -->
-        <nav class="navbar navbar-dark bg-dark">
-            <h1 class="h2 w-25 p-2 mb-2 bg-info text-dark text-wrap text-center font-weight-bold">JAILANIE KAGANOVSKY</h1>
+            <div class="container-fluid">
+                <div class="text-center">
+                <img class="self-portrait rounded-circle img-fluid mt-5" src="./assets/images/selfportrait.jpg" alt="Self Portrait">
+                </div>
 
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                <a class="h4 nav-link text-info" href="#about-me">About Me</a>
-                </li>
+                <div class="card-body">
+                    <p class="h3 text-center">CONTACT ME</p>
 
-                <li class="nav-item">
-                <a class="h4 nav-link text-info" href="#work">Work</a>
-                </li>
+                    <a class="nav-link h5 text-center text-white" href="mailto:jnctw33ty@gmail.com">
+                        <i class="fas fa-envelope"></i>
+                        E-mail
+                    </a>
 
-                <li class="nav-item">
-                <a class="h4 nav-link text-info" href="#contact-me">Contact Me</a>
-                </li>
 
-                <li class="nav-item">
-                <a class="h4 nav-link text-info" href="./assets/Resume.pdf">Resume</a>
-                </li>
-            </ul>
-        </nav>
+                    <a class="nav-link h5 text-center text-white" href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">
+                        <i class="fab fa-linkedin"></i>
+                        LinkedIn
+                    </a>
 
-        <!-- Self-portrait & Title -->
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container d-flex justify-content-between">
-                <img class="rounded-circle self-portrait" src="./assets/images/selfportrait.jpg" alt="Self Portrait"/>
+                    <a class="nav-link h5 text-center text-white" href="https://github.com/jkaganovsky">
+                        <i class="fab fa-github"></i>
+                        Github
+                    </a>
 
-                <h3 class="p-2 align-self-end bg-info font-italic"> Research Coordinator & Web Developer </h3>
+                    <a class="nav-link h5 text-center text-white" href="./assets/Resume.pdf">
+                        <i class="fas fa-file-pdf"></i>
+                        Resume
+                    </a>
+
+                </div>
+
             </div>
+
         </div>
 
-    </header>
+        <div class="col-sm-8 bg-light">
 
-    <!-- Divided content into 3 main sections (About Me, Work, Contact Me) with id tags for links from
-    header to reference to. -->
-    <main>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 d-flex justify-content-end">
-                    <h1 class="h1 align-self-start" id="about-me">About Me</h1>
-                    <span class="border border-dark ml-4 mb-2"></span>
-                </div>
-
-                <div class="col-sm-8">
-                    <h3>
-                        Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions, tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT. Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload organization, research assistance and coordination, and system application building, web development, and maintenance.
-                    </h3>
-                </div>
+            <div class="jumbotron jumbotron-fluid">
+                <p class="card-text h1 text-left font-weight-bold ml-4">
+                    JAILANIE KAGANOVSKY
+                </p>
+                <div class="card bg-dark ml-4" style="width: 20rem;"></div>
+                <p class="card-text h3 text-left text-primary font-italic ml-4 mt-2">
+                    Research Coordinator & Web Developer
+                </p>
             </div>
 
-            <div class="row">
-                <div class="col-sm-4 d-flex justify-content-end">
-                    <h1 class="h1 align-self-start" id="work">Work</h1>
-                    <span class="border border-dark ml-4 mb-2"></span>
-                </div>
+            <div class="card-text h4 p-2 bg-secondary text-white rounded" style="width: 20rem;">
+                ABOUT ME
+            </div>
+            <p class="card-text h6 p-2 bg-light text-justify">
+                Very dedicated, patient-focused laboratory technician with 16 years of expertise in DNA extractions, tumor acquisitions, data entry, result entry, customer and client service relations, & Healthcare IT. Who exemplifies accuracy in patient history, medical and clinical documentation, kit send outs, workload organization, research assistance and coordination, and system application building, web development, and maintenance.
+            </p>
 
-                <div class="col-sm-8">
-                    <a class="featured-project btn" href="https://jkaganovsky.github.io/Kitchen-Helper/">
-                        <img src="./assets/images/kitchenhelper-screenshot.png" alt="Kitchen Helper" />
+            <div class="card-text h4 p-2 bg-secondary text-white rounded" style="width: 20rem;">
+                WORK
+            </div>
+            <div class="col-sm">
+                <a class="featured-project btn" href="https://jkaganovsky.github.io/Kitchen-Helper/">
+                    <img src="./assets/images/kitchenhelper-screenshot.png" alt="Kitchen Helper" />
+                    <aside class="project-title">
+                        <h3>Main Project</h3>
+                        <h4>Kitchen Helper</h4>
+                    </aside>
+                </a>
+
+                <div class="projects">
+                    <a class="project-info btn" href="https://jkaganovsky.github.io/Weather-Dashboard/">
+                        <img src="./assets/images/weatherdashboard-screenshot.png" alt="Weather Dashboard" />
                         <aside class="project-title">
-                            <h3>Main Project</h3>
-                            <h4>Kitchen Helper</h4>
+                            <h3>Project 2</h3>
+                            <h4>Weather Dashboard</h4>
                         </aside>
                     </a>
 
-                    <div class="projects">
-                        <a class="project-info btn" href="https://jkaganovsky.github.io/Weather-Dashboard/">
-                            <img src="./assets/images/weatherdashboard-screenshot.png" alt="Weather Dashboard" />
-                            <aside class="project-title">
-                                <h3>Project 2</h3>
-                                <h4>Weather Dashboard</h4>
-                            </aside>
-                        </a>
+                    <a class="project-info btn" href="https://jkaganovsky.github.io/Day-Planner/">
+                        <img src="./assets/images/dayscheduler-screenshot.png" alt="Work Day Scheduler" />
+                        <aside class="project-title">
+                            <h3>Project 3</h3>
+                            <h4>Work Day Scheduler</h4>
+                        </aside>
+                    </a>
 
-                        <a class="project-info btn" href="https://jkaganovsky.github.io/Day-Planner/">
-                            <img src="./assets/images/dayscheduler-screenshot.png" alt="Work Day Scheduler" />
-                            <aside class="project-title">
-                                <h3>Project 3</h3>
-                                <h4>Work Day Scheduler</h4>
-                            </aside>
-                        </a>
+                    <a class="project-info btn" href="https://jkaganovsky.github.io/Code-Quiz/">
+                        <img src="./assets/images/codingquiz-screenshot.png" alt="Coding Quiz" />
+                        <aside class="project-title">
+                            <h3>Project 4</h3>
+                            <h4>Coding Quiz</h4>
+                        </aside>
+                    </a>
 
-                        <a class="project-info btn" href="https://jkaganovsky.github.io/Code-Quiz/">
-                            <img src="./assets/images/codingquiz-screenshot.png" alt="Coding Quiz" />
-                            <aside class="project-title">
-                                <h3>Project 4</h3>
-                                <h4>Coding Quiz</h4>
-                            </aside>
-                        </a>
+                    <a class="project-info btn" href="https://jkaganovsky.github.io/Password-Generator/">
+                        <img src="./assets/images/passwordgenerator-screenshot.jpg" alt="Password Generator" />
+                        <aside class="project-title">
+                            <h3>Project 5</h3>
+                            <h4>Password Generator</h4>
+                        </aside>
+                    </a>
 
-                        <a class="project-info btn" href="https://jkaganovsky.github.io/Password-Generator/">
-                            <img src="./assets/images/passwordgenerator-screenshot.jpg" alt="Password Generator" />
-                            <aside class="project-title">
-                                <h3>Project 5</h3>
-                                <h4>Password Generator</h4>
-                            </aside>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-4 d-flex justify-content-end">
-                    <h1 class="h1 align-self-center" id="contact-me">Contact Me</h1>
-                    <span class="border border-dark ml-4"></span>
                 </div>
 
-                <nav class="nav col-sm-8 p-4 d-flex justify-content-around">
-                    <a class="nav-link h4" href="mailto:jnctw33ty@gmail.com">E-Mail</a>
-
-                    <a class="nav-link h4" href="https://www.linkedin.com/in/jailanie-kaganovsky-573a00116/">LinkedIn</a>
-
-                    <a class="nav-link h4" href="https://github.com/jkaganovsky">Github</a>
-                </nav>
             </div>
+
         </div>
-    </main>
 
-    <!-- SCRIPT CDNs -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+    </div>
+
 </body>
-
 </html>
