Changed portfolio framework and added new project link and information.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="row">
 
-        <div class="col-sm-3 bg-info">
+        <div class="col-sm-4 bg-info">
 
             <div class="container-fluid">
                 <div class="text-center">
@@ -55,7 +55,7 @@
 
         </div>
 
-        <div class="col-sm-9 bg-light">
+        <div class="col-sm-8 bg-light">
 
             <div class="jumbotron jumbotron-fluid">
                 <p class="card-text h1 text-left font-weight-bold ml-4">
@@ -116,6 +116,14 @@
                         <aside class="project-title">
                             <h3>Project 5</h3>
                             <h4>Password Generator</h4>
+                        </aside>
+                    </a>
+
+                    <a class="project-info btn" href="https://jkaganovsky.github.io/Password-Generator/">
+                        <img src="./assets/images/eatdaburger.png" alt="Password Generator" />
+                        <aside class="project-title">
+                            <h3>Project 6</h3>
+                            <h4>Burger Logger</h4>
                         </aside>
                     </a>
 
