--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         </aside>
                     </a>
 
-                    <a class="project-info btn" href="https://jkaganovsky.github.io/Password-Generator/">
+                    <a class="project-info btn" href="https://jkaganovsky.github.io/Burger/">
                         <img src="./assets/images/eatdaburger.png" alt="Password Generator" />
                         <aside class="project-title">
                             <h3>Project 6</h3>
