Renamed alt on project 6 to Burger Logger.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </a>
 
                     <a class="project-info btn" href="https://jkaganovsky.github.io/Burger/">
-                        <img src="./assets/images/eatdaburger.png" alt="Password Generator" />
+                        <img src="./assets/images/eatdaburger.png" alt="Burger Logger" />
                         <aside class="project-title">
                             <h3>Project 6</h3>
                             <h4>Burger Logger</h4>
